@@ -535,7 +535,7 @@ unittest
 
 			}
 			//requires users input
-			if(window.waitEvent(event))
+			//if(window.waitEvent(event))
 			{
 
 			}
